[gd_scene load_steps=8 format=3 uid="uid://do8k7liwccajj"]

[ext_resource type="Script" path="res://Objetos/Basuras/basura.gd" id="1_qwqpd"]
[ext_resource type="Texture2D" uid="uid://dy03ex5um3gft" path="res://Sprites/manzana.png" id="2_nnl4x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o20r8"]
size = Vector2(64, 64)

[sub_resource type="Animation" id="Animation_sb7na"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_daixc"]
_data = {
"RESET": SubResource("Animation_sb7na")
}

[sub_resource type="Animation" id="Animation_o82d3"]
resource_name = "flotando"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -8), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yw0f5"]
_data = {
"flotando": SubResource("Animation_o82d3")
}

[node name="Basura_organica_manzana" type="RigidBody2D" groups=["Basura"]]
gravity_scale = 0.0
constant_force = Vector2(-30, 0)
script = ExtResource("1_qwqpd")

[node name="Area2D" type="Area2D" parent="." groups=["Basura"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_o20r8")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(1.19209e-07, 1.19209e-07)
scale = Vector2(3.2, 3.2)

[node name="Manzana" type="Sprite2D" parent="."]
scale = Vector2(3, 3)
texture = ExtResource("2_nnl4x")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Manzana"]
libraries = {
"": SubResource("AnimationLibrary_daixc"),
"objetos": SubResource("AnimationLibrary_yw0f5")
}
autoplay = "objetos/flotando"
speed_scale = 0.5

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
